--- a/BikingTogether/BikingTogether/Base.lproj/Main.storyboard
+++ b/BikingTogether/BikingTogether/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,142 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AE0-ah-HGy">
+                                <rect key="frame" x="340" y="300" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="177" y="285" width="46" height="30"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="HN7-TG-xHg" kind="presentation" id="IUq-uR-dE1"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-880" y="-55"/>
+        </scene>
+        <!--Plan List-->
+        <scene sceneID="9g7-bQ-sIN">
+            <objects>
+                <viewController id="uyP-lE-Jfj" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Gd8-Mt-5G9"/>
+                        <viewControllerLayoutGuide type="bottom" id="nwx-7A-b7J"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="T6x-QO-eIY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.59263461829999997" green="0.81040543320000002" blue="0.99282437560000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Plan List" id="fNW-8T-KI3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KGt-M4-10k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="646" y="276"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="af1-nu-4BN">
+            <objects>
+                <viewController id="jFi-9m-Fbl" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="njg-bo-M3U"/>
+                        <viewControllerLayoutGuide type="bottom" id="uGT-D6-UDI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tPd-Ll-HvZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wgy-4U-VuI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1410" y="276"/>
+        </scene>
+        <!--History-->
+        <scene sceneID="JRZ-yn-vZw">
+            <objects>
+                <viewController id="35J-LI-j2n" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vfn-hF-Z7u"/>
+                        <viewControllerLayoutGuide type="bottom" id="LjH-OA-Y65"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VqE-p0-NV9">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="History" id="ZKh-ro-Kps"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SBW-hD-vWp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="624" y="993"/>
+        </scene>
+        <!--Friend List-->
+        <scene sceneID="oHr-T0-MSK">
+            <objects>
+                <viewController id="CRB-iQ-XEK" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xED-Iy-XnO"/>
+                        <viewControllerLayoutGuide type="bottom" id="ObV-xV-8Dl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="LA4-Gk-AgY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Friend List" id="o7l-zi-9Kb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="80R-mk-Fbw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="624" y="1675"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Ttc-mi-1gH">
+            <objects>
+                <viewController id="5ux-xQ-8FA" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="h5I-na-ejk"/>
+                        <viewControllerLayoutGuide type="bottom" id="fZd-qO-BrL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bbw-ye-DJ5">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="9gX-ur-SwA"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zBZ-le-mmH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="646" y="-386"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="P1a-ca-NWX">
+            <objects>
+                <tabBarController id="HN7-TG-xHg" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="AQR-Kv-PUS"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="r4y-LG-sba">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="5ux-xQ-8FA" kind="relationship" relationship="viewControllers" id="iZ2-79-amh"/>
+                        <segue destination="uyP-lE-Jfj" kind="relationship" relationship="viewControllers" id="X0x-9t-tcR"/>
+                        <segue destination="35J-LI-j2n" kind="relationship" relationship="viewControllers" id="n3B-hu-Ecv"/>
+                        <segue destination="CRB-iQ-XEK" kind="relationship" relationship="viewControllers" id="uBm-y9-n4o"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3XQ-d6-WKy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-174" y="-55"/>
         </scene>
     </scenes>
 </document>
